--- a/JavaScript/Learn_Enough_JavaScript/Listing_2.5/index.html
+++ b/JavaScript/Learn_Enough_JavaScript/Listing_2.5/index.html
@@ -3,13 +3,9 @@
   <head>
     <title>Learn Enough JavaScript</title>
     <meta charset="utf-8">
-    <script type="text/javascript" async>
+    <script>
       alert("hello, world!");
-    </script>
-    <script type="text/javascript" async>
-      window.onload = function(event) {
-        alert("hello, Pravin!");
-      };
+      console.log("This page contains a friendly greeting.");
     </script>
   </head>
   <body>
