--- a/JavaScript/Learn_Enough_JavaScript/index.html
+++ b/JavaScript/Learn_Enough_JavaScript/index.html
@@ -8,7 +8,10 @@
     <body>
         <p>
             <ul>
+                    <li><a href="Ch2.3_Exercise_1">Ch2.3_Exercise_1</a></li>
+                    <li><a href="Ch4.2_Listing_4.1">Ch4.2_Listing_4.1</a></li>
                     <li><a href="Listing_1.2">Listing_1.2</a></li>
+                    <li><a href="Listing_2.5">Listing_2.5</a></li>
             </ul>
         </p>
     </body>
