--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -8,7 +8,9 @@
     <body>
         <p>
             <ul>
+                    <li><a href="EduCBA">EduCBA</a></li>
                     <li><a href="Learn_Enough_JavaScript">Learn_Enough_JavaScript</a></li>
+                    <li><a href="Meenakshi_Finance">Meenakshi_Finance</a></li>
                     <li><a href="MyPractice">MyPractice</a></li>
             </ul>
         </p>
