more Learn_Enough_JavaScript

--- a/JavaScript/Learn_Enough_JavaScript/index.html
+++ b/JavaScript/Learn_Enough_JavaScript/index.html
@@ -8,10 +8,10 @@
     <body>
         <p>
             <ul>
-                    <li><a href="Ch1.2_Listing_1.2">Ch1.2_Listing_1.2</a></li>
-                    <li><a href="Ch2.3_Exercise_1">Ch2.3_Exercise_1</a></li>
-                    <li><a href="Ch2.3_Listing_2.5">Ch2.3_Listing_2.5</a></li>
-                    <li><a href="Ch4.2_Listing_4.1">Ch4.2_Listing_4.1</a></li>
+                    <li><a href="Chapter1">Chapter1</a></li>
+                    <li><a href="Chapter2">Chapter2</a></li>
+                    <li><a href="Chapter4">Chapter4</a></li>
+                    <li><a href="Chapter5">Chapter5</a></li>
             </ul>
         </p>
     </body>
