Learn Enough JavaScript - Chapter 9

--- a/JavaScript/Learn_Enough_JavaScript/index.html
+++ b/JavaScript/Learn_Enough_JavaScript/index.html
@@ -12,6 +12,7 @@
                     <li><a href="Chapter2">Chapter2</a></li>
                     <li><a href="Chapter4">Chapter4</a></li>
                     <li><a href="Chapter5">Chapter5</a></li>
+                    <li><a href="Chapter9">Chapter9</a></li>
             </ul>
         </p>
     </body>
