and more JavaScript

--- a/JavaScript/MyPractice/index.html
+++ b/JavaScript/MyPractice/index.html
@@ -11,6 +11,7 @@
                     <li><a href="MochaJavaScriptSample">MochaJavaScriptSample</a></li>
                     <li><a href="MyDate.html">MyDate.html</a></li>
                     <li><a href="MyDate.js">MyDate.js</a></li>
+                    <li><a href="Tail_Call_Optimization">Tail_Call_Optimization</a></li>
                     <li><a href="external.js">external.js</a></li>
                     <li><a href="external_js.html">external_js.html</a></li>
                     <li><a href="inheritance_es5.html">inheritance_es5.html</a></li>
