--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -10,8 +10,12 @@
             <ul>
                     <li><a href="EduCBA">EduCBA</a></li>
                     <li><a href="Learn_Enough_JavaScript">Learn_Enough_JavaScript</a></li>
+                    <li><a href="Master_JS_Functional_FedericoKereki">Master_JS_Functional_FedericoKereki</a></li>
                     <li><a href="Meenakshi_Finance">Meenakshi_Finance</a></li>
+                    <li><a href="Mozilla_Developer_Network">Mozilla_Developer_Network</a></li>
                     <li><a href="MyPractice">MyPractice</a></li>
+                    <li><a href="Template">Template</a></li>
+                    <li><a href="W3Schools">W3Schools</a></li>
             </ul>
         </p>
     </body>
