Recuring Deposit Calculator: set default values for all inputs

--- a/JavaScript/Meenakshi_Finance/Recuring_Deposit/index.html
+++ b/JavaScript/Meenakshi_Finance/Recuring_Deposit/index.html
@@ -35,17 +35,17 @@
   <body>
     <form id="user_inputs" method="post" action="">
       <label for="instalment_premium">Instalment Premium: </label><br>
-      <input type="number" name="instalment_premium" id="instalment_premium"><br><br>
-      <label for="interest_percentage">Interest Rate in Percentage: </label><br>
-      <input type="number" name="interest_percentage" id="interest_percentage"><br><br>
-      <label for="compound_period_months">Compounding Period in Months: </label><br>
-      <input type="number" name="compound_period_months" id="compound_period_months"><br><br>
+      <input type="number" name="instalment_premium" id="instalment_premium" value="1000"><br><br>
       <label for="tenure_months">Tenure in Months: </label><br>
-      <input type="number" name="tenure_months" id="tenure_months"><br><br>
+      <input type="number" name="tenure_months" id="tenure_months" value="120"><br><br>
       <label for="paying_term">Premium Paying Term in Months: </label><br>
-      <input type="number" name="paying_term" id="paying_term"><br><br>
+      <input type="number" name="paying_term" id="paying_term" value="1"><br><br>
       <label for="premium_frequency">Premium Frequency in Months: </label><br>
-      <input type="number" name="premium_frequency" id="premium_frequency"><br><br>
+      <input type="number" name="premium_frequency" id="premium_frequency" value="1"><br><br>
+      <label for="interest_percentage">Interest Rate in Percentage: </label><br>
+      <input type="number" name="interest_percentage" id="interest_percentage" value="12"><br><br>
+      <label for="compound_period_months">Compounding Period in Months: </label><br>
+      <input type="number" name="compound_period_months" id="compound_period_months" value="3"><br><br>
       <input type="submit">
     </form>
     <p id="print_parent">
