Firstcry Baby Boy Names List

--- a/JavaScript/Meenakshi_Finance/index.html
+++ b/JavaScript/Meenakshi_Finance/index.html
@@ -10,6 +10,7 @@
             <ul>
                     <li><a href="Recuring_Deposit">Recuring_Deposit</a></li>
                     <li><a href="Savings_Interest">Savings_Interest</a></li>
+                    <li><a href="bankmanagement-schema-example.webp">bankmanagement-schema-example.webp</a></li>
             </ul>
         </p>
     </body>
