FirstcryBabyNames - add stylesheet to support bookmark plink

--- a/FirstcryBabyNames/x.html
+++ b/FirstcryBabyNames/x.html
@@ -1,6 +1,14 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+<body>
 <br>
-<div style="font-size:2em; font-weight:bold; background-color:skyblue;">
+<div id="name1" style="font-size:2em; font-weight:bold; background-color:skyblue;">
 Xhiva
+<a class="plink" href="#name1"></a>
 </div>
 Assamese version of Lord Shiva. It means benign, kind, auspicious, Assamese version of Lord Shiva. It means benign, kind, auspicious
 <br>
@@ -9,8 +17,9 @@ Religion: Hindu
 <br>
 <br>
 <br>
-<div style="font-size:2em; font-weight:bold; background-color:skyblue;">
+<div id="name2" style="font-size:2em; font-weight:bold; background-color:skyblue;">
 Xanthus
+<a class="plink" href="#name2"></a>
 </div>
 A river god., A river god.
 <br>
@@ -19,8 +28,9 @@ Religion: Greek
 <br>
 <br>
 <br>
-<div style="font-size:2em; font-weight:bold; background-color:skyblue;">
+<div id="name3" style="font-size:2em; font-weight:bold; background-color:skyblue;">
 Xurxo
+<a class="plink" href="#name3"></a>
 </div>
 Farmer, Farmer
 <br>
@@ -29,8 +39,9 @@ Religion: Christianity
 <br>
 <br>
 <br>
-<div style="font-size:2em; font-weight:bold; background-color:skyblue;">
+<div id="name4" style="font-size:2em; font-weight:bold; background-color:skyblue;">
 Xantheus
+<a class="plink" href="#name4"></a>
 </div>
 One who is golden haired., One who is golden haired.
 <br>
@@ -39,8 +50,9 @@ Religion: Christianity
 <br>
 <br>
 <br>
-<div style="font-size:2em; font-weight:bold; background-color:skyblue;">
+<div id="name5" style="font-size:2em; font-weight:bold; background-color:skyblue;">
 Xagan
+<a class="plink" href="#name5"></a>
 </div>
 Cross over water, Ford worldly cares
 <br>
@@ -49,8 +61,9 @@ Religion: sikh
 <br>
 <br>
 <br>
-<div style="font-size:2em; font-weight:bold; background-color:skyblue;">
+<div id="name6" style="font-size:2em; font-weight:bold; background-color:skyblue;">
 Xamak
+<a class="plink" href="#name6"></a>
 </div>
 Twinkle, Shimmer
 <br>
@@ -59,8 +72,9 @@ Religion: sikh
 <br>
 <br>
 <br>
-<div style="font-size:2em; font-weight:bold; background-color:skyblue;">
+<div id="name7" style="font-size:2em; font-weight:bold; background-color:skyblue;">
 Xemjeet
+<a class="plink" href="#name7"></a>
 </div>
 Topper
 <br>
@@ -69,8 +83,9 @@ Religion: sikh
 <br>
 <br>
 <br>
-<div style="font-size:2em; font-weight:bold; background-color:skyblue;">
+<div id="name8" style="font-size:2em; font-weight:bold; background-color:skyblue;">
 Xesas
+<a class="plink" href="#name8"></a>
 </div>
 God is salvation, God is salvation
 <br>
@@ -79,8 +94,9 @@ Religion: Christianity
 <br>
 <br>
 <br>
-<div style="font-size:2em; font-weight:bold; background-color:skyblue;">
+<div id="name9" style="font-size:2em; font-weight:bold; background-color:skyblue;">
 Xanda
+<a class="plink" href="#name9"></a>
 </div>
 Insignia
 <br>
@@ -89,8 +105,9 @@ Religion: sikh
 <br>
 <br>
 <br>
-<div style="font-size:2em; font-weight:bold; background-color:skyblue;">
+<div id="name10" style="font-size:2em; font-weight:bold; background-color:skyblue;">
 Xobeen
+<a class="plink" href="#name10"></a>
 </div>
 Spear, Spear
 <br>
@@ -99,8 +116,9 @@ Religion: Islam
 <br>
 <br>
 <br>
-<div style="font-size:2em; font-weight:bold; background-color:skyblue;">
+<div id="name11" style="font-size:2em; font-weight:bold; background-color:skyblue;">
 Xallu
+<a class="plink" href="#name11"></a>
 </div>
 Defender
 <br>
@@ -109,8 +127,9 @@ Religion: sikh
 <br>
 <br>
 <br>
-<div style="font-size:2em; font-weight:bold; background-color:skyblue;">
+<div id="name12" style="font-size:2em; font-weight:bold; background-color:skyblue;">
 Xagar
+<a class="plink" href="#name12"></a>
 </div>
 Pass through worldly cares
 <br>
@@ -119,8 +138,9 @@ Religion: sikh
 <br>
 <br>
 <br>
-<div style="font-size:2em; font-weight:bold; background-color:skyblue;">
+<div id="name13" style="font-size:2em; font-weight:bold; background-color:skyblue;">
 Xhim
+<a class="plink" href="#name13"></a>
 </div>
 Soft, Gentle
 <br>
@@ -129,8 +149,9 @@ Religion: sikh
 <br>
 <br>
 <br>
-<div style="font-size:2em; font-weight:bold; background-color:skyblue;">
+<div id="name14" style="font-size:2em; font-weight:bold; background-color:skyblue;">
 Xoan
+<a class="plink" href="#name14"></a>
 </div>
 Brazilian form of Juan, meaning God is gracious., Brazilian form of Juan, meaning God is gracious.
 <br>
@@ -139,8 +160,9 @@ Religion: Christianity
 <br>
 <br>
 <br>
-<div style="font-size:2em; font-weight:bold; background-color:skyblue;">
+<div id="name15" style="font-size:2em; font-weight:bold; background-color:skyblue;">
 Xenos
+<a class="plink" href="#name15"></a>
 </div>
 Stranger, Stranger
 <br>
@@ -148,3 +170,5 @@ Religion: Christianity,Greek
 <br>
 <br>
 <br>
+</body>
+</html>
