Meenakshi Finance Loan Interest Calculator

--- a/JavaScript/Meenakshi_Finance/index.html
+++ b/JavaScript/Meenakshi_Finance/index.html
@@ -8,6 +8,7 @@
     <body>
         <p>
             <ul>
+                    <li><a href="Loan_Interest">Loan_Interest</a></li>
                     <li><a href="Recuring_Deposit">Recuring_Deposit</a></li>
                     <li><a href="Savings_Interest">Savings_Interest</a></li>
                     <li><a href="bankmanagement-schema-example.webp">bankmanagement-schema-example.webp</a></li>
