TODO: need to make proper responsive website

--- a/JavaScript/Meenakshi_Finance/Loan_Interest/index.html
+++ b/JavaScript/Meenakshi_Finance/Loan_Interest/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=240, initial-scale=1.0">
 
     <title>Gold Loan Interest Calculator</title>
 
