add links from home page

--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -11,6 +11,7 @@
                     <li><a href="EduCBA">EduCBA</a></li>
                     <li><a href="Learn_Enough_JavaScript">Learn_Enough_JavaScript</a></li>
                     <li><a href="Master_JS_Functional_FedericoKereki">Master_JS_Functional_FedericoKereki</a></li>
+                    <li><a href="MeenakshiMahal">MeenakshiMahal</a></li>
                     <li><a href="Meenakshi_Finance">Meenakshi_Finance</a></li>
                     <li><a href="Mozilla_Developer_Network">Mozilla_Developer_Network</a></li>
                     <li><a href="MyPractice">MyPractice</a></li>
